# generic_radio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linter.yml
fsw/cfs/: CMakeLists.txt
fsw/cfs/mission_inc/: generic_radio_perfids.h
fsw/cfs/platform_inc/: generic_radio_msgids.h  generic_radio_platform_cfg.h
fsw/cfs/src/: generic_radio_app.c  generic_radio_app.h  generic_radio_device.c  generic_radio_device.h  generic_radio_events.h  generic_radio_msg.h  generic_radio_version.h
fsw/fprime/: CMakeLists.txt  library.cmake
fsw/fprime/mission_inc/: generic_radio_perfids.h
fsw/fprime/platform_inc/: generic_radio_msgids.h  generic_radio_platform_cfg.h
fsw/fprime/radio_src/: CMakeLists.txt  Generic_radio.cpp  Generic_radio.fpp  Generic_radio.hpp
fsw/fprime/radio_src/docs/: sdd.md
fsw/fprime/src/: generic_radio_app.c  generic_radio_app.h  generic_radio_device.h  generic_radio_events.h  generic_radio_msg.h  generic_radio_version.h
fsw/mission_inc/: generic_radio_perfids.h
fsw/platform_inc/: generic_radio_msgids.h  generic_radio_platform_cfg.h
fsw/shared/: generic_radio_device.c  generic_radio_device.h
fsw/src/: generic_radio_app.c  generic_radio_app.h  generic_radio_device.c  generic_radio_device.h  generic_radio_events.h  generic_radio_msg.h
fsw/standalone/: CMakeLists.txt  device_cfg.h  generic_radio_checkout.c  generic_radio_checkout.h
gsw/: GENERIC_RADIO_SIM_CMD.txt  generic_radio.xtce
gsw/GENERIC_RADIO/: target.txt
gsw/GENERIC_RADIO/cmd_tlm/: GENERIC_RADIO_CMD.txt  GENERIC_RADIO_TLM.txt
gsw/GENERIC_RADIO/lib/: generic_radio_lib.rb
gsw/GENERIC_RADIO/procedures/: generic_radio_test.rb
gsw/GENERIC_RADIO/procedures/tests/: generic_radio_app_test.rb  generic_radio_ast_test.rb  generic_radio_device_test.rb
sim/: CMakeLists.txt
sim/cfg/: nos3-radio-simulator.xml
sim/inc/: generic_radio_42_data_provider.hpp  generic_radio_data_point.hpp  generic_radio_data_provider.hpp  generic_radio_hardware_model.hpp
sim/src/: generic_radio_42_data_provider.cpp  generic_radio_data_point.cpp  generic_radio_data_provider.cpp  generic_radio_hardware_model.cpp  generic_radio_sim.cpp
support/: CMakeLists.txt  device_cfg.h  generic_radio_checkout.c  generic_radio_checkout.h
